fix: improve font CLS time, reduce invisible text

--- a/stackedit_style.css
+++ b/stackedit_style.css
@@ -118,6 +118,15 @@
     font-weight:400;
     font-style:normal
 }
+body,html{
+    color:rgba(0,0,0,.75);
+    font-size:16px;
+    font-family:Lato, system-ui, -apple-system, 'Helvetica Neue', sans-serif, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans';
+    font-variant-ligatures:common-ligatures;
+    line-height:1.67;
+    -webkit-font-smoothing:antialiased;
+    -moz-osx-font-smoothing:grayscale
+}
 .katex{
     font:normal 1.21em KaTeX_Main,Times New Roman,serif;
     line-height:1.2;
@@ -1146,15 +1155,6 @@ canvas{
 }
 [hidden],template{
     display:none
-}
-body,html{
-    color:rgba(0,0,0,.75);
-    font-size:16px;
-    font-family:Lato,Helvetica Neue,Helvetica,sans-serif;
-    font-variant-ligatures:common-ligatures;
-    line-height:1.67;
-    -webkit-font-smoothing:antialiased;
-    -moz-osx-font-smoothing:grayscale
 }
 .app--dark .layout__panel--editor,.app--dark .layout__panel--preview{
     color:hsla(0,0%,100%,.75)
